fixed some styling issues on smaller screen

--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ nav.desktop .hamburg {
 section {
     color: var(--text-color);
     padding: 3rem 2rem;
-    height: calc(100vh - var(--nav-bar-size)); /* Reduce the default minimum height */
+    min-height: calc(100vh - var(--nav-bar-size)); /* Reduce the default minimum height */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -175,6 +175,7 @@ section h1 {
 
 
 #about #pfp {
+    height: 10rem;
     aspect-ratio: 1;
     border-radius: 50%;
     margin: 3rem auto;
@@ -199,6 +200,7 @@ section h1 {
 
 #projects .projects-subsection {
     height: 25rem;
+    max-height: 60%;
     width: 100%;
     margin-top: 5rem;
     border-top: 2px solid rgba(255, 255, 255, 0.8);
@@ -297,12 +299,14 @@ section h1 {
     flex-direction: column;
     padding: 1rem;
     overflow: hidden;
+    font-size: em;
 }
 
 /* picture inside */
 #projects .projects-subsection .items-container .project-items .project-item a .project-content picture {
     width: 100%;
-    height: 60%;
+    flex-grow: 1;
+    max-height: 50%;
     background-color: #000000;
     border: 2px solid rgba(255, 255, 255, 0.249);
     border-radius: 0.5rem;
@@ -322,26 +326,16 @@ section h1 {
 
 #projects .projects-subsection .items-container .project-items .project-item a .project-content p.project-description {
     height: 40%;
-    font-size: 15px;
 }
 
 #skills {
     position: relative;
-}
-
-#skills .skills-container {
-    height: 100%;
-    /* margin-top: 4rem; */
-    position: absolute;
-    top: 0;
-    width: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
 
 #skills .skill-items {
-    width: 80%;
+    flex-grow: 1;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -353,6 +347,7 @@ section h1 {
 #skills .skill-items .skill-item {
     height: 5rem;
     margin: 1rem 2rem;
+    margin-top: 3rem;
     aspect-ratio: 1;
 }
 
@@ -368,10 +363,6 @@ section h1 {
 }
 
 
-#socials {
-    height: calc(100vh - var(--nav-bar-size) - 3rem);
-}
-
 footer {
     height: 3rem;
     color: white;
@@ -383,20 +374,12 @@ footer {
 
 #socials {
     position: relative;
-}
-
-#socials .socials-container {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
 
 #socials .social-items {
-    width: 80%;
+    flex-grow: 1;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
